[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/characters/player/Explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/anim_explodetest01.png" type="Texture" id=2]
[ext_resource path="res://assets/sfx/Explosion.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 141.0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1400, 0, 700, 700 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 700, 700, 700 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 700, 700, 700 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1400, 700, 700, 700 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "explode",
"speed": 10.0
} ]

[node name="Explosion" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ExplosionParticles" type="AnimatedSprite" parent="."]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
animation = "explode"

[node name="ExplosionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="frame_changed" from="ExplosionParticles" to="." method="_on_ExplosionParticles_frame_changed"]
